# CHIP-8-Interpreter

./: .gitignore  CMakeLists.txt  README.md
src/: emulator.cpp  emulator.h  main.cpp
